Remove November 2015 folder of MCC site

--- a/portfolio/MCC-NOV-2015/css/snowstyle.css
+++ b/portfolio/MCC-NOV-2015/css/snowstyle.css
@@ -1,5 +1,6 @@
+/* This snowflake effect was created by TheCodePlayer */
+/* Source: http://thecodeplayer.com/walkthrough/html5-canvas-snow-effect */
 body {
-	/*You can use any kind of background here.*/
 	background-color: #6b92b9;
 }
 canvas {
