--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -88,7 +88,7 @@ ul {
 .biopic {
     float: left;
     padding: 10px;
-    width: 200px;
+    width: 175px;
     display: block;
 }
 
@@ -177,7 +177,7 @@ ul {
     font-size: 16px;
     color: #f3f3f3;
     line-height: 28px;
-    max-width: 650px;
+    max-width: 575px;
 }
 
 .white-text {
@@ -216,6 +216,11 @@ ul {
     padding-bottom: 5%;
 }
 
+#skills-languages,
+#skills-fw-lib,
+#skills-other {
+    max-width: 800px;
+}
 
 /* Media queries to handle various device widths */
 
@@ -244,9 +249,10 @@ ul {
 
 /* Show contact info in two columns.  Modified version of approach shown here:  http://jsfiddle.net/qUAT6/ */
 
-@media only screen and (min-width: 650px) and (max-width: 749px) {
+@media only screen and (min-width: 650px) {
     #topContacts,
     #footerContacts {
+        font-size: 16px;
         display: block;
         -moz-column-count: 2;
         -moz-column-gap: 20px;
