--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -394,6 +394,9 @@ ul {
     .flex-box {
         justify-content: flex-start;
     }
+    #mapDiv {
+        height: 300px;
+    }
     #name {
         font-size: 24px;
     }
