Update to latest version of resume project

--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -164,6 +164,10 @@ ul {
     margin: 0;
 }
 
+.resume-link-text {
+    display: block;
+}
+
 .skills-header {
     display: inline;
     color: #85a3f3;
