--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -342,6 +342,9 @@ ul {
     .skills-ul {
         max-width: 500px;
     }
+    .welcome-bullet {
+        font-size: 14px;
+    }
     #biopic-small-container {
         display: inline;
     }
