--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -1,533 +1,1 @@
-body,
-div,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-p,
-ul {
-    padding: 0;
-    margin: 0;
-    font-family: "Noto Sans", sans-serif;
-}
-
-h2,
-h3,
-h4,
-h5 {
-    padding: 10px 5%;
-}
-
-a {
-    color: #092568;
-    text-decoration: none;
-    margin-top: 10px;
-    display: block;
-}
-
-h1 {
-    font-size: 40px;
-    color: #85a3f3;
-    line-height: 48px;
-    display: inline;
-}
-
-h1+span {
-    color: #fff;
-}
-
-h2 {
-    font-weight: bold;
-    font-size: 24px;
-    color: #0f1f4c;
-    line-height: 29px;
-    padding: 10px;
-}
-
-h3 {
-    font-style: italic;
-    font-size: 20px;
-    color: #0f1f4c;
-    line-height: 22px;
-}
-
-h4 {
-    font-weight: bold;
-    font-size: 14px;
-    color: #4a4a4a;
-    line-height: 17px;
-}
-
-hr {
-    max-width: 1000px;
-    margin-left: 0;
-}
-
-img {
-    max-width: 100%;
-}
-
-li {
-    font-size: 16px;
-}
-
-p {
-    font-size: 14px;
-    color: #333;
-    line-height: 21px;
-}
-
-span {
-    padding: 5px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-.education-entry,
-.work-entry,
-.project-entry {
-    padding: 5px 5%;
-    max-width: 845px;
-}
-
-.center-content {
-    padding: 2.5% 5%;
-}
-
-.clear-fix {
-    overflow: auto;
-}
-
-.contact.flex-item {
-    padding-bottom: 5px;
-}
-
-.dark-gray {
-    background-color: #4a4a4a;
-}
-
-.date-text {
-    font-style: italic;
-    font-size: 14px;
-    color: #999;
-    line-height: 16px;
-    float: left;
-}
-
-.flex-box {
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 10px;
-}
-
-.gray {
-    background-color: #f3f3f3;
-    padding-bottom: 10px;
-    clear: both;
-}
-
-.inline-link {
-    display: inline;
-}
-
-.light-blue {
-    background-color: #85a3f3;
-}
-
-.contact-type {
-    color: #85a3f3;
-    padding: 5px 5px 5px 0;
-}
-
-.location-text {
-    font-style: italic;
-    font-size: 14px;
-    color: #999;
-    line-height: 16px;
-    float: right;
-}
-
-.project-image {
-    display: block;
-}
-
-.project-image-container {
-    display: inline-block;
-    margin-bottom: 10px;
-}
-
-.project-image-container a {
-    display: block;
-    margin: 0;
-}
-
-.resume-link-text {
-    display: block;
-}
-
-.skills-header {
-    display: inline;
-    color: #85a3f3;
-    clear: both;
-    padding-left: 0px;
-    font-size: 16px;
-}
-
-.skills-ul {
-    max-width: 660px;
-    padding: 10px 0 10px 0;
-}
-
-.tech-used {
-    margin: 5px 0 5px 0;
-}
-
-.underline-link:hover {
-    text-decoration: underline;
-}
-
-.welcome-bullet {
-    color: #fff;
-    font-size: 16px;
-    list-style-type: disc;
-    list-style-position: inside;
-    text-indent: -1em;
-    margin-left: 15px;
-    margin-top: 5px;
-}
-
-.white-text {
-    font-weight: bold;
-    color: #fff;
-}
-
-.white-text a {
-    color: #fff;
-    display: inline;
-}
-
-.white-text a:hover {
-    color: orange;
-}
-
-#biopic-big {
-    padding: 10px 15px 10px 0;
-    width: 130px;
-    height: 130px;
-}
-
-#biopic-small {
-    padding: 10px 10px 10px 0;
-    width: 80px;
-    height: 80px;
-}
-
-#biopic-small-container {
-    display: none;
-    float: left;
-    width: 90px;
-    height: 90px;
-}
-
-#header {
-    background-color: #0f1f4c;
-}
-
-#footer-contacts {
-    max-width: 1005px;
-}
-
-#lets-connect {
-    text-align: left;
-    color: #3366ff;
-    background-color: #0f1f4c;
-}
-
-#map {
-    display: block;
-    height: 100%;
-    margin: 0 10%;
-}
-
-#mapDiv {
-    height: 400px;
-    width: 100%;
-    max-width: 1005px;
-    padding-bottom: 5%;
-}
-
-#name {
-    padding: 0 10px 0 0;
-}
-
-#name-role-container {
-    overflow: hidden;
-}
-
-#resume-links {
-    max-width: 845px;
-}
-
-#role {
-    padding: 5px 5px 5px 0px;
-}
-
-#skills-container {
-    max-width: 1000px;
-}
-
-#top-contacts {
-    max-width: 1000px;
-}
-
-#top-content-container {
-    max-width: 1000px;
-}
-
-#top-content-left {
-    float: left;
-    width: 145px;
-    height: 150px;
-}
-
-#top-content-right {
-    max-width: 700px;
-    overflow: hidden;
-}
-
-#top-rule {
-    display: block;
-    max-width: 855px;
-}
-#welcome-bullets-list {
-    max-width: 845px;
-}
-
-/* Show contact info in two columns.  Modified version of approach shown here:  http://jsfiddle.net/qUAT6/ */
-
-@media only screen and (min-width: 750px) {
-    #top-contacts,
-    #footer-contacts {
-        font-size: 16px;
-        display: block;
-        -moz-column-count: 2;
-        -moz-column-gap: 20px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 20px;
-        column-count: 2;
-        column-gap: 20px;
-        height: 85px;
-        text-align: left;
-    }
-}
-
-@media only screen and (max-width: 749px) {
-    li {
-        font-size: 14px;
-    }
-    .resume-link-text {
-        font-size: 14px;
-    }
-    .skills-header {
-        font-size: 14px;
-    }
-    .skills-ul {
-        max-width: 500px;
-    }
-    .welcome-bullet {
-        font-size: 14px;
-    }
-    #biopic-small-container {
-        display: inline;
-    }
-    #name {
-        font-size: 36px;
-    }
-    #role {
-        font-size: 14px;
-        padding: 5px 0 0 0;
-    }
-    #top-content-left {
-        display: none;
-    }
-    #top-content-container {
-        height: 130px;
-    }
-    #top-rule {
-        vertical-align: bottom;
-        margin-top: 0;
-    }
-    #top-contacts,
-    #footer-contacts {
-        font-size: 14px;
-        display: block;
-        -moz-column-count: 2;
-        -moz-column-gap: 40px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 40px;
-        column-count: 2;
-        column-gap: 40px;
-        height: 85px;
-        text-align: left;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    #top-content-right {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    #biopic-small-container {
-        float: left;
-        display: inline;
-        width: 90px;
-    }
-    #name-role-container {
-        overflow: hidden;
-        padding-top: 40px;
-    }
-    #top-contacts {
-        width: 100%;
-        display: block;
-    }
-    #top-content-container {
-        height: 170px;
-    }
-    #top-content-right {
-        display: inline;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .contact {
-        display: block;
-    }
-    .flex-box {
-        justify-content: flex-start;
-    }
-    #mapDiv {
-        height: 300px;
-    }
-    #name {
-        font-size: 24px;
-    }
-    #name-role-container {
-        padding-top: 12px;
-    }
-    /* show name and role on separate rows */
-    #role {
-        display: block;
-        margin-bottom: 8px;
-        padding: 0 0 0 2px;
-    }
-    /* Show contact info in one column. */
-    #top-contacts,
-    #footer-contacts {
-        font-size: 14px;
-        display: block;
-        -moz-column-count: 1;
-        -moz-column-gap: 40px;
-        -webkit-column-count: 1;
-        -webkit-column-gap: 40px;
-        column-count: 1;
-        column-gap: 0px;
-        height: auto;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-        width: auto;
-    }
-    #top-content-container {
-        height: auto;
-    }
-    /* display skills in 2 columns */
-    #skills-fw-lib {
-        display: block;
-        width: auto;
-        height: auto;
-        -moz-column-count: 2;
-        -moz-column-gap: 10px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 10px;
-        column-count: 2;
-        column-gap: 10px;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-    }
-    /* display skills in 2 columns */
-    #skills-other {
-        display: block;
-        width: auto;
-        height: auto;
-        -moz-column-count: 2;
-        -moz-column-gap: 10px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 10px;
-        column-count: 2;
-        column-gap: 10px;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-    }
-}
-
-@media only screen and (max-width: 300px) {
-    h2 {
-        font-size: 18px;
-        padding: 10px 10px 0 10px;
-    }
-    h3 {
-        font-size: 16px;
-        padding: 5% 5% 0 5%;
-    }
-    p {
-        font-size: 12px;
-    }
-    .contact {
-        font-size: 12px;
-    }
-    .education-entry,
-    .work-entry {
-        font-size: 14px;
-    }
-    .skills-header {
-        font-size: 12px;
-    }
-    .welcome-bullet {
-        font-size: 12px;
-    }
-    .white-text {
-        font-size: 12px;
-    }
-    #skills-container ul li span {
-        font-size: 11px;
-    }
-    #name {
-        font-size: 16px;
-    }
-    /* display skills in 2 columns */
-    #skills-languages {
-        display: block;
-        width: auto;
-        -moz-column-count: 2;
-        -moz-column-gap: 10px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 10px;
-        column-count: 2;
-        column-gap: 10px;
-        height: 60px;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-    }
-}
+*{font-family:'Doppio One',sans-serif;color:#000}#header,#main-container,#project-container,#project-header-container,body{width:304px}.aspect-ratio{padding-bottom:28.125%}.contact .contact-type{color:#85a3f3;font-size:15px}.contact span{display:inline-block}.contact-type{width:75px;padding:5px 0 0}.contact-value a{text-decoration:none;font-size:14px;color:#fff}#role,.contact-value a,.project-description{font-family:Roboto}.contact-value a:hover{color:#f90}.content{position:absolute;top:0;bottom:0;left:0;right:0;padding:2%}.inner-content{position:absolute;top:0;bottom:0;left:0;right:0;margin:2%}.project{margin-bottom:5px;position:relative;width:100%;cursor:pointer}.project-description{font-size:13px}.project-image-container{overflow:hidden;width:26px;margin:0 5px 0 0;float:left}.project-link-black,.project-link-white{text-decoration:none}.project-link-black:hover{text-decoration:underline;color:#000}.project-link-white:hover{text-decoration:underline;color:#FFF}.project-repo{position:absolute;bottom:0;left:32px}.project-repo a{text-decoration:none}.project-repo a:hover{text-decoration:underline}.project-text{overflow:hidden}.small-tile{color:red}.span-dot{padding:0 5px;color:#fff}#biopic{padding:10px;width:80px;height:80px;float:left}#biopic-name-role{height:95px;background-color:#0f1f4c}#contacts{list-style-type:none;padding:0 0 0 10px;margin:0}#contact-container{background-color:#0f1f4c;margin-top:5px;padding-bottom:1px}#name{color:#85a3f3;font-size:26px;font-weight:700;padding:15px 0 10px}#name-role-container{display:inline-block}#project-1 .aspect-ratio{background-color:#090}#project-1 .project-text-container .project-description,#project-1 .project-text-container .project-repo a,#project-1 .project-text-container .project-title,#project-2 .project-text-container .project-description,#project-2 .project-text-container .project-repo a,#project-2 .project-text-container .project-title,#project-3 .project-text-container .project-description,#project-3 .project-text-container .project-repo a,#project-3 .project-text-container .project-title{color:#FFF}#project-2 .aspect-ratio{background-color:#dc4747}#project-3 .aspect-ratio{background-color:#0f1f4c}#project-4 .aspect-ratio{background-color:#ff3}#project-5 .aspect-ratio{background-color:#6b92b9}#project-6 .aspect-ratio{background-color:#e2e2e2}#project-header{font-size:24px;font-weight:700;margin:5px 0 5px 8px}#project-header-container{background-color:#ccc;padding-bottom:1px;margin-bottom:5px}#role{color:#fff;font-size:14px;margin:0 0 0 2px}@media only screen and (min-width:320px){#header,#main-container,#project-container,#project-header-container,body{width:auto}}@media only screen and (min-width:560px){#contacts{display:block;width:auto;-moz-column-count:2;-moz-column-gap:10px;-webkit-column-count:2;-webkit-column-gap:10px;column-count:2;column-gap:10px;height:80px;text-align:left;max-width:100%;padding-top:5px}}@media only screen and (min-width:850px){.contact-type{text-align:right;margin-right:10px;font-size:17px}.contact-value a{font-size:15px}#contacts{display:block;width:auto;-moz-column-count:3;-moz-column-gap:10px;-webkit-column-count:3;-webkit-column-gap:10px;column-count:3;column-gap:10px;height:60px;text-align:left;max-width:100%;padding-top:5px}}@media only screen and (min-width:640px){.project{width:50%}#project-1 .aspect-ratio,#project-3 .aspect-ratio,#project-5 .aspect-ratio{margin-right:2.5px}#project-2 .aspect-ratio,#project-4 .aspect-ratio,#project-6 .aspect-ratio{margin-left:2.5px}#project-5,#project-6{margin-bottom:0}#project-container{display:flex;flex-wrap:wrap;flex-direction:row;resize:both;overflow:auto}}@media only screen and (min-width:1210px){#main-container{width:1200px;margin:0 auto}}@media only screen and (min-width:400px){.project-image-container{width:30%;height:100%;position:absolute;left:0}.project-text-container{width:70%;position:absolute;left:30%;height:100%;margin-left:5px}.project-repo{left:0}}@media only screen and (min-width:500px){.project-image-container{width:40%}.project-text-container{width:60%;left:40%}}@media only screen and (min-width:560px){.project-image-container{width:50%}.project-text-container{width:50%;left:50%}}@media only screen and (min-width:640px){.project-image-container{width:26px;height:auto;position:relative;left:auto}.project-text-container{width:100%;position:relative;left:auto;margin-left:0}.project-repo{left:32px}}@media only screen and (min-width:784px){.project-image-container{width:30%;height:100%;position:absolute;left:0}.project-text-container{width:70%;position:absolute;left:30%;height:100%;margin-left:5px}.project-repo{left:0}}@media only screen and (min-width:984px){.project-image-container{width:40%}.project-text-container{width:60%;left:40%}}@media only screen and (min-width:1104px){.project-image-container{width:50%}.project-text-container{width:50%;left:50%}}
