Update to latest version of portfolio project

--- a/css/style.css
+++ b/css/style.css
@@ -1,395 +1,1 @@
-* {
-    font-family: 'Doppio One', sans-serif;
-    color: #000;
-}
-
-body,
-#main-container,
-#header,
-#project-header-container,
-#project-container {
-    width: 304px;
-}
-
-.aspect-ratio {
-    padding-bottom: 28.125%;
-}
-
-.contact .contact-type {
-    color: #85a3f3;
-    font-size: 15px;
-}
-
-.contact span {
-    display: inline-block;
-}
-
-.contact-type {
-    width: 75px;
-    padding: 5px 0px 0px 0px;
-}
-
-.contact-value a {
-    text-decoration: none;
-    font-size: 14px;
-    color: #fff;
-}
-
-.contact-value a,
-.project-description,
-#role {
-    font-family: 'Roboto';
-}
-
-.contact-value a:hover {
-    color: #ff9900;
-}
-
-.content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 2%;
-}
-
-.inner-content {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: 2% 2% 2% 2%;
-}
-
-.project {
-    margin-bottom: 5px;
-    position: relative;
-    width: 100%;
-    cursor: pointer;
-}
-
-.project-description {
-    font-size: 13px;
-}
-
-.project-image-container {
-    overflow: hidden;
-    width: 26px;
-    margin: 0 5px 0 0;
-    float: left;
-}
-
-.project-link-black,
-.project-link-white {
-    text-decoration: none;
-}
-
-.project-link-black:hover {
-    text-decoration: underline;
-    color: #000;
-}
-
-.project-link-white:hover {
-    text-decoration: underline;
-    color: #FFF;
-}
-
-.project-repo {
-    position: absolute;
-    bottom: 0;
-    left: 32px;
-}
-
-.project-repo a {
-    text-decoration: none;
-}
-
-.project-repo a:hover {
-    text-decoration: underline;
-}
-
-.project-text {
-    overflow: hidden;
-}
-
-.small-tile {
-    color: red;
-}
-
-.span-dot {
-    padding: 0px 5px;
-    color: #fff;
-}
-
-#biopic {
-    padding: 10px;
-    width: 80px;
-    height: 80px;
-    float: left;
-}
-
-#biopic-name-role {
-    height: 95px;
-    background-color: #0f1f4c;
-}
-
-#contacts {
-    list-style-type: none;
-    padding: 0px 0px 0px 10px;
-    margin: 0px;
-}
-
-#contact-container {
-    background-color: #0f1f4c;
-    margin-top: 5px;
-    padding-bottom: 1px;
-}
-
-#name {
-    color: #85a3f3;
-    font-size: 26px;
-    font-weight: bold;
-    padding: 15px 0 10px 0;
-}
-
-#name-role-container {
-    display: inline-block;
-}
-
-#project-1 .aspect-ratio {
-    background-color: #090;
-}
-
-#project-1 .project-text-container .project-title,
-#project-1 .project-text-container .project-description,
-#project-1 .project-text-container .project-repo a,
-#project-2 .project-text-container .project-title,
-#project-2 .project-text-container .project-description,
-#project-2 .project-text-container .project-repo a,
-#project-3 .project-text-container .project-title,
-#project-3 .project-text-container .project-description,
-#project-3 .project-text-container .project-repo a {
-    color: #FFF;
-}
-
-#project-2 .aspect-ratio {
-    background-color: #dc4747;
-}
-
-#project-3 .aspect-ratio {
-    background-color: #0f1f4c;
-}
-
-#project-4 .aspect-ratio {
-    background-color: #ffff33;
-}
-
-#project-5 .aspect-ratio {
-    background-color: #6b92b9;
-}
-
-#project-6 .aspect-ratio {
-    background-color: #e2e2e2;
-}
-
-#project-header {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 5px 0 5px 8px;
-}
-
-#project-header-container {
-    background-color: #ccc;
-    padding-bottom: 1px;
-    margin-bottom: 5px;
-}
-
-#role {
-    color: #fff;
-    font-size: 14px;
-    margin: 0 0 0 2px;
-}
-
-@media only screen and (min-width: 320px) {
-    body,
-    #main-container,
-    #header,
-    #project-header-container,
-    #project-container {
-        width: auto;
-    }
-}
-
-@media only screen and (min-width: 560px) {
-    #contacts {
-        display: block;
-        width: auto;
-        -moz-column-count: 2;
-        -moz-column-gap: 10px;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 10px;
-        column-count: 2;
-        column-gap: 10px;
-        height: 80px;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-    }
-}
-
-@media only screen and (min-width: 850px) {
-    .contact-type {
-        text-align: right;
-        margin-right: 10px;
-        font-size: 17px;
-    }
-    .contact-value a {
-        font-size: 15px;
-    }
-    #contacts {
-        display: block;
-        width: auto;
-        -moz-column-count: 3;
-        -moz-column-gap: 10px;
-        -webkit-column-count: 3;
-        -webkit-column-gap: 10px;
-        column-count: 3;
-        column-gap: 10px;
-        height: 60px;
-        text-align: left;
-        max-width: 100%;
-        padding-top: 5px;
-    }
-}
-
-@media only screen and (min-width: 640px) {
-    .project {
-        width: 50%;
-    }
-    #project-1 .aspect-ratio,
-    #project-3 .aspect-ratio,
-    #project-5 .aspect-ratio {
-        margin-right: 2.5px;
-    }
-    #project-2 .aspect-ratio,
-    #project-4 .aspect-ratio,
-    #project-6 .aspect-ratio {
-        margin-left: 2.5px;
-    }
-    #project-5,
-    #project-6 {
-        margin-bottom: 0px;
-    }
-    #project-container {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        resize: both;
-        overflow: auto;
-    }
-}
-
-@media only screen and (min-width: 1210px) {
-    #main-container {
-        width: 1200px;
-        margin: 0 auto;
-    }
-}
-
-@media only screen and (min-width: 400px) {
-    .project-image-container {
-        width: 30%;
-        height: 100%;
-        position: absolute;
-        left: 0px;
-    }
-    .project-text-container {
-        width: 70%;
-        position: absolute;
-        left: 30%;
-        height: 100%;
-        margin-left: 5px;
-    }
-    .project-repo {
-        left: 0px;
-    }
-}
-
-@media only screen and (min-width: 500px) {
-    .project-image-container {
-        width: 40%;
-    }
-    .project-text-container {
-        width: 60%;
-        left: 40%;
-    }
-}
-
-@media only screen and (min-width: 560px) {
-    .project-image-container {
-        width: 50%;
-    }
-    .project-text-container {
-        width: 50%;
-        left: 50%;
-    }
-}
-
-@media only screen and (min-width: 640px) {
-    .project-image-container {
-        width: 26px;
-        height: auto;
-        position: relative;
-        left: auto;
-    }
-    .project-text-container {
-        width: 100%;
-        position: relative;
-        left: auto;
-        margin-left: 0;
-    }
-    .project-repo {
-        left: 32px;
-    }
-}
-
-@media only screen and (min-width: 784px) {
-    .project-image-container {
-        width: 30%;
-        height: 100%;
-        position: absolute;
-        left: 0px;
-    }
-    .project-text-container {
-        width: 70%;
-        position: absolute;
-        left: 30%;
-        height: 100%;
-        margin-left: 5px;
-    }
-    .project-repo {
-        left: 0px;
-    }
-}
-
-@media only screen and (min-width: 984px) {
-    .project-image-container {
-        width: 40%;
-    }
-    .project-text-container {
-        width: 60%;
-        left: 40%;
-    }
-}
-
-@media only screen and (min-width: 1104px) {
-    .project-image-container {
-        width: 50%;
-    }
-    .project-text-container {
-        width: 50%;
-        left: 50%;
-    }
-}
+*{font-family:'Doppio One',sans-serif;color:#000}#header,#main-container,#project-container,#project-header-container,body{width:304px}.aspect-ratio{padding-bottom:28.125%}.contact .contact-type{color:#85a3f3;font-size:15px}.contact span{display:inline-block}.contact-type{width:75px;padding:5px 0 0}.contact-value a{text-decoration:none;font-size:14px;color:#fff}#role,.contact-value a,.project-description{font-family:Roboto}.contact-value a:hover{color:#f90}.content{position:absolute;top:0;bottom:0;left:0;right:0;padding:2%}.inner-content{position:absolute;top:0;bottom:0;left:0;right:0;margin:2%}.project{margin-bottom:5px;position:relative;width:100%;cursor:pointer}.project-description{font-size:13px}.project-image-container{overflow:hidden;width:26px;margin:0 5px 0 0;float:left}.project-link-black,.project-link-white{text-decoration:none}.project-link-black:hover{text-decoration:underline;color:#000}.project-link-white:hover{text-decoration:underline;color:#FFF}.project-repo{position:absolute;bottom:0;left:32px}.project-repo a{text-decoration:none}.project-repo a:hover{text-decoration:underline}.project-text{overflow:hidden}.small-tile{color:red}.span-dot{padding:0 5px;color:#fff}#biopic{padding:10px;width:80px;height:80px;float:left}#biopic-name-role{height:95px;background-color:#0f1f4c}#contacts{list-style-type:none;padding:0 0 0 10px;margin:0}#contact-container{background-color:#0f1f4c;margin-top:5px;padding-bottom:1px}#name{color:#85a3f3;font-size:26px;font-weight:700;padding:15px 0 10px}#name-role-container{display:inline-block}#project-1 .aspect-ratio{background-color:#090}#project-1 .project-text-container .project-description,#project-1 .project-text-container .project-repo a,#project-1 .project-text-container .project-title,#project-2 .project-text-container .project-description,#project-2 .project-text-container .project-repo a,#project-2 .project-text-container .project-title,#project-3 .project-text-container .project-description,#project-3 .project-text-container .project-repo a,#project-3 .project-text-container .project-title{color:#FFF}#project-2 .aspect-ratio{background-color:#dc4747}#project-3 .aspect-ratio{background-color:#0f1f4c}#project-4 .aspect-ratio{background-color:#ff3}#project-5 .aspect-ratio{background-color:#6b92b9}#project-6 .aspect-ratio{background-color:#e2e2e2}#project-header{font-size:24px;font-weight:700;margin:5px 0 5px 8px}#project-header-container{background-color:#ccc;padding-bottom:1px;margin-bottom:5px}#role{color:#fff;font-size:14px;margin:0 0 0 2px}@media only screen and (min-width:320px){#header,#main-container,#project-container,#project-header-container,body{width:auto}}@media only screen and (min-width:560px){#contacts{display:block;width:auto;-moz-column-count:2;-moz-column-gap:10px;-webkit-column-count:2;-webkit-column-gap:10px;column-count:2;column-gap:10px;height:80px;text-align:left;max-width:100%;padding-top:5px}}@media only screen and (min-width:850px){.contact-type{text-align:right;margin-right:10px;font-size:17px}.contact-value a{font-size:15px}#contacts{display:block;width:auto;-moz-column-count:3;-moz-column-gap:10px;-webkit-column-count:3;-webkit-column-gap:10px;column-count:3;column-gap:10px;height:60px;text-align:left;max-width:100%;padding-top:5px}}@media only screen and (min-width:640px){.project{width:50%}#project-1 .aspect-ratio,#project-3 .aspect-ratio,#project-5 .aspect-ratio{margin-right:2.5px}#project-2 .aspect-ratio,#project-4 .aspect-ratio,#project-6 .aspect-ratio{margin-left:2.5px}#project-5,#project-6{margin-bottom:0}#project-container{display:flex;flex-wrap:wrap;flex-direction:row;resize:both;overflow:auto}}@media only screen and (min-width:1210px){#main-container{width:1200px;margin:0 auto}}@media only screen and (min-width:400px){.project-image-container{width:30%;height:100%;position:absolute;left:0}.project-text-container{width:70%;position:absolute;left:30%;height:100%;margin-left:5px}.project-repo{left:0}}@media only screen and (min-width:500px){.project-image-container{width:40%}.project-text-container{width:60%;left:40%}}@media only screen and (min-width:560px){.project-image-container{width:50%}.project-text-container{width:50%;left:50%}}@media only screen and (min-width:640px){.project-image-container{width:26px;height:auto;position:relative;left:auto}.project-text-container{width:100%;position:relative;left:auto;margin-left:0}.project-repo{left:32px}}@media only screen and (min-width:784px){.project-image-container{width:30%;height:100%;position:absolute;left:0}.project-text-container{width:70%;position:absolute;left:30%;height:100%;margin-left:5px}.project-repo{left:0}}@media only screen and (min-width:984px){.project-image-container{width:40%}.project-text-container{width:60%;left:40%}}@media only screen and (min-width:1104px){.project-image-container{width:50%}.project-text-container{width:50%;left:50%}}
